# AudiencePro

./: .gitignore  BENCHMARKS.md  BENCHMARKS_AND_COMPARISON.md  BUILD_COMPLETE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DOCUMENTATION_GAP_ANALYSIS.md  INSTALL.md  INSTALLATION_SUCCESS.md  README.md  ROADMAP.md  SECURITY.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
audience_pro/: __init__.py
benches/: benchmarks.rs
docs/: api-reference.md  architecture.md  comparison.md  error-catalog.json  getting-started-simple.md  performance-comparison.md  press-release.md  troubleshooting.md
examples/: basic_segmentation.py  streaming_updates.py
python/audience_pro/: audience_pro.pyi
python/clusteraudiencekit/: __init__.py  clusteraudiencekit.pyi
scripts/: install-curl.sh  install-from-source.sh  install-pip.ps1  install-pip.sh
src/: lib.rs  python.rs
src/engine/: clustering.rs  metrics.rs  mod.rs  rfm.rs
src/streaming/: mod.rs
src/utils/: conversions.rs  mod.rs  validation.rs
tests/: test_basic.py  test_performance.py
