[package]
name = "audience-pro"
version = "0.1.0"
edition = "2021"
authors = ["Georgi Mammen Mullassery <mullassery@gmail.com>"]
license = "MIT"
description = "High-performance audience segmentation engine with Python bindings"
repository = "https://github.com/Mullassery/AudiencePro"
readme = "README.md"
keywords = ["segmentation", "marketing", "customer", "clustering", "rfm"]
categories = ["algorithms", "data-structures"]

[dependencies]
ndarray = "0.16"
ndarray-stats = "0.5"
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
arrow = "55.0"
parquet = "55.0"
rayon = "1.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "benchmarks"
harness = false

[lib]
name = "audience_pro"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
