[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "audience-pro"
version = "0.1.0"
description = "High-performance audience segmentation engine with Python bindings"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3",
    "numpy>=1.20",
    "pyarrow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "black>=22.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
repository = "https://github.com/Mullassery/AudiencePro"
documentation = "https://audience-pro.readthedocs.io"
"Bug Tracker" = "https://github.com/Mullassery/AudiencePro/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-packages = ["audience_pro"]
